--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "apollo-server": "^3.13.0",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "mysql": "^2.18.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
